syntax = "proto3";
message RequestMsg
{
	int32 cmdType = 1;
	bytes clientId = 2;
	bytes serverId = 3;
	bytes sign = 4;
	bytes data = 5;
}
message RespondMsg
{
	bool rv = 1; //返回值
	int32 seckeyid = 2; // 对称密钥编号 keysn
	bytes clientId = 3; // 客户端编号
	bytes serverId = 4; // 服务器编号
	bytes data = 5; //服务器端随机数
}